fixed a layout issue
content was previously "jumping"

--- a/scss/sweetp.scss
+++ b/scss/sweetp.scss
@@ -129,8 +129,7 @@ html#sweetp {
     #sweetp-wrapper {
         width: 100%;
         min-height: 100dvh;
-        position: absolute;
-        top: 0;
+        position: relative;
     }
 
     .sweetp-menu {
